# BCOM-C-Feature

./: .gitignore  CLAUDE.md  README.md  bob.sh  conftest.py  pyproject.toml
docs/adr/: ADR-006-bob-voice-assistant-architecture.md  ADR-007-stt-systemd-deployment.md  ADR-008-stt-mac-tunnel.md  ADR-009-bob-phase1-settings-launchd-completion.md  ADR-010-ferrofluid-orb-visualizer.md  ADR-011-bob-spectrum-skin.md  ADR-012-bob-orb-unified-interface.md
docs/plans/: 2026-03-01-bob-settings-panel-design.md  2026-03-01-bob-settings-panel.md  2026-03-01-phase1-implementation.md  2026-03-01-phase1-orchestrator-tts-barge-in-design.md  2026-03-02-phase2-twilio-telephony.md  2026-03-03-bob-spectrum-skin-design.md  2026-03-03-bob-spectrum-skin.md  2026-03-03-ferrofluid-orb-design.md  2026-03-03-ferrofluid-orb.md
docs/steering/: bob-personality-and-voice.md  bob-system-prompt.txt
experiments/: ferrofluid-orb.html
infra/mac/: com.myroproductions.bob-control.plist  com.myroproductions.stt-tunnel.plist  install-bob-service.sh
src/desktop-client/: Cargo.toml
src/desktop-client/src/: audio.rs  control.rs  main.rs  stt.rs  vad.rs
src/hotkey-daemon/: daemon.py  detect_key.py
src/media-key-tap/: build.sh  main.swift  media-key-tap
src/orchestrator/: config.py  main.py  player.py  requirements.txt  session.py
src/process-manager/: app.py
src/stt-service/: README.md  bob-stt.service  config.py  record_test.py  requirements.txt  server.py  test_client.py  transcriber.py
src/telephony_adapter/: call_session.py  config.py  main.py  requirements.txt  twiml.py
(+20 files in other folders)
